added other sections

--- a/index.html
+++ b/index.html
@@ -91,5 +91,46 @@
         </div>
       </div>
     </section>
+    <section class="info">
+      <div>
+        <img
+          class="info-img"
+          src="./images/construction.png"
+          alt="construction"
+        />
+        <div class="info-description">
+          <p class="info-text">Lorem Ipsum</p>
+          <h5 class="info-title">Lorem Ipsum dolor sit</h5>
+          <p class="info-text2 text-margin">
+            Lorem ipsum dolor sit amet, elit ut aliquam, purus sit amet ipsum
+            dolor si dolor sit dolor sit dolor sit
+          </p>
+        </div>
+      </div>
+      <div>
+        <div class="info-margin info-description">
+          <p class="info-text">Lorem Ipsum</p>
+          <h5 class="info-title">Lorem Ipsum dolor sit</h5>
+          <p class="info-text2">
+            Lorem ipsum dolor sit amet, elit ut aliquam, purus sit amet ipsum
+            dolor si dolor sit dolor sit dolor sit
+          </p>
+        </div>
+        <img src="./images/houses.png" alt="houses" />
+      </div>
+    </section>
+    <section class="contact">
+      <h2 class="contact-title">Contact</h2>
+      <p class="contact-text">Lorem ipsum dolor sit amet elit</p>
+      <div class="input">
+        <div class="imie-email">
+          <p class="text-style imie">Imie</p>
+          <p class="text-style email">email</p>
+        </div>
+        <p class="text-style temat">Temat</p>
+        <p class="text-style tresc">tresc</p>
+      </div>
+      <a href="#" class="contact-btn">send</a>
+    </section>
   </body>
 </html>
